--- a/package.json
+++ b/package.json
@@ -5,24 +5,27 @@
     "publisher": "orenan",
     "license": "MIT",
     "version": "0.0.1",
+    "scripts": {
+        "build": "vsce package"
+    },
     "engines": {
         "vscode": "^1.53.0"
     },
     "repository": {
-		"type": "git",
-		"url": "https://github.com/orenan/pop-theme.git"
-	},
+        "type": "git",
+        "url": "https://github.com/orenan/pop-theme.git"
+    },
     "categories": [
         "Themes"
     ],
     "keywords": [
-		"dracula",
-		"dark",
+        "dracula",
+        "dark",
         "pop-os",
         "pop",
-		"theme",
-		"color-theme"
-	],
+        "theme",
+        "color-theme"
+    ],
     "contributes": {
         "themes": [
             {
@@ -31,5 +34,8 @@
                 "path": "./themes/pop-theme-color-theme.json"
             }
         ]
+    },
+    "devDependencies": {
+        "vsce": "^1.87.0"
     }
 }
